--- a/css/styles.css
+++ b/css/styles.css
@@ -583,8 +583,10 @@ link {
 /* Гостьова */
 
 .customer {
-  padding: 32px 0
+  padding: 32px 0 32px
 }
+
+.customer_div {}
 
 .customer_title {
   margin-bottom: 72px;
@@ -618,6 +620,7 @@ link {
   color: #8e8f99;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .custom_svg {
