--- a/css/styles.css
+++ b/css/styles.css
@@ -749,7 +749,7 @@ link {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn {
+.modal_btn {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -765,20 +765,24 @@ link {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #404bbf;
+  border: none;
 }
 
-.modal-icon {
+.modal_icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #404bbf;
+  border: none;
 }
 
-.modal-btn:hover,
-.modal-btn:focus {
+.modal_btn:hover,
+.modal_btn:focus {
   background-color: #404bbf;
   border: none;
   fill: #ffffff;
 }
 
-.is-hidden {
+.is_hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
