--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ link {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   line-height: 1.17;
-  color: var(--PrimaryBrand);
+  color: #404bbf;
   font-weight: 800;
   letter-spacing: 0.03em;
   text-decoration: none;
@@ -92,7 +92,6 @@ link {
 /* Хедер */
 .header {
   border-bottom: 1px solid #e7e9fc;
-
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 
@@ -101,8 +100,8 @@ link {
 .header_container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  color: #404bbf;
+  flex-grow: 1;
+  gap: 76px;
 }
 
 .nav_panel {
