--- a/css/styles.css
+++ b/css/styles.css
@@ -108,11 +108,12 @@ link {
 .nav_panel {
   display: flex;
   align-items: center;
+  color: #404bbf;
 }
 
 .current {
   position: relative;
-  background-color: #404bbf;
+  color: #404bbf;
 }
 
 .current::after {
