--- a/css/styles.css
+++ b/css/styles.css
@@ -589,14 +589,14 @@ link {
 /* Гостьова */
 
 .customer {
-  padding: 32px 0 32px
+  padding: 120px 0 120px
 }
 
 .customer_div {}
 
 .customer_title {
   margin-bottom: 72px;
-  color: var(--color-for-url);
+  color: #2e2f42;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -613,7 +613,11 @@ link {
   margin: 0;
 }
 
-.custom_list {}
+.custom_list {
+  height: 88px;
+  width: calc((100% - 120px) / 6);
+
+}
 
 .custom_a {
   width: 100%;
@@ -630,7 +634,7 @@ link {
 }
 
 .custom_svg {
-  fill: #f4f4fd;
+  fill: currentColor;
 }
 
 .custom_a:hover,
