--- a/css/styles.css
+++ b/css/styles.css
@@ -521,18 +521,29 @@ link {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  flex-basis: calc((100% - 48px) / 3);
+
 }
 
 .porto_item {
   text-decoration: none;
   gap: 24px;
+  flex-basis: calc((100% - 48px) / 3);
 }
 
-.linkes .div-text {
+.linkes {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.div-text {
   border: 1px solid #e7e9fc;
   border-top: none;
   padding: 32px 16px;
+}
+
+.porto_image {
+  position: relative;
+  overflow: hidden;
 }
 
 .porto_item_tittle {
@@ -558,33 +569,39 @@ link {
 
 .porto-box-overlay {
   position: absolute;
-  padding: 40px 32px;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--PrimaryBrand);
-  color: #f4f4fd;
-  letter-spacing: 0.02em;
+  font-size: 16px;
   line-height: 1.5;
-  overflow: auto;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
   transform: translateY(100%);
-  position: absolute;
-  border: 1px solid var(--Light);
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.porto-box-overlay .linkes:focus,
-.porto-box-overlay .linkes:active {
+.linkes:hover .porto-box-overlay {
   transform: translateY(0%);
 }
 
+.linkes:focus .porto-box-overlay {
+  transform: translateY(0%);
+}
+
+
+
+
 .linkes:focus,
-.linkes:active {
+.linkes:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+
 
 /* Гостьова */
 
