--- a/css/styles.css
+++ b/css/styles.css
@@ -307,9 +307,11 @@ link {
 
 .buttonse:hover,
 .buttonse:focus {
-  color: var(--White);
-  background-color: var(--Pressedstate);
+  background-color: #404bbf;
+  color: #ffffff;
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button_item {
