--- a/css/styles.css
+++ b/css/styles.css
@@ -301,8 +301,7 @@ link {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.64px;
-
-  background: var(--Light);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid #e7e9fc;
 }
 
@@ -513,7 +512,8 @@ link {
 }
 
 .maines {
-  margin-right: 120px auto
+  margin-right: 120px;
+
 }
 
 .menu_list {
