--- a/css/styles.css
+++ b/css/styles.css
@@ -319,6 +319,7 @@ link {
   display: inline-flex;
   align-items: flex-start;
   gap: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Основна секція */
@@ -453,8 +454,8 @@ link {
 }
 
 .our_container {
-padding-top: 32px;
-padding-bottom: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .our_title {
