--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ link {
   display: flex;
   align-items: center;
   flex-grow: 1;
-  margin-left: auto;
+  
 
 }
 
@@ -662,7 +662,9 @@ link {
 
 }
 
-.custom_svg {}
+.custom_svg {
+
+}
 
 .custom_a:hover,
 .custom_a:focus {
@@ -753,13 +755,12 @@ link {
 }
 
 .logos_svg {
-  fill: currentColor;
+  fill: #f4f4fd;
 }
 
 .logos_a:hover,
 .logos_a:focus {
-  color: #404bbf;
-  border-color: #404bbf;
+  background-color: #31d0aa;
 }
 
 /* Модальне вікно */
