--- a/css/styles.css
+++ b/css/styles.css
@@ -619,7 +619,8 @@ link {
 /* Гостьова */
 
 .customer {
-  padding: 120px 0 120px
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .customer_div {}
@@ -640,7 +641,7 @@ link {
 .custom_ul {
   display: flex;
   gap: 24px;
-  margin: 0;
+
 }
 
 .custom_list {
@@ -660,15 +661,18 @@ link {
   color: #8e8f99;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.custom_svg {
+  fill: currentColor;
 
 }
 
-.custom_svg {}
-
 .custom_a:hover,
 .custom_a:focus {
-  color: #404bbf;
+
   border-color: #404bbf;
+  color: #404bbf;
 }
 
 /* Мережа */
@@ -705,7 +709,6 @@ link {
 .network_a:hover,
 .network_a:focus {
   background-color: #404bbf;
-  fill: currentColor;
 }
 
 /* В фудері */
