--- a/css/styles.css
+++ b/css/styles.css
@@ -302,9 +302,9 @@ link {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.64px;
-
   background: var(--Light);
   border: 1px solid #e7e9fc;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttonse:hover,
@@ -659,8 +659,6 @@ link {
   align-items: center;
   justify-content: center;
   color: #8e8f99;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .custom_svg {
