--- a/css/styles.css
+++ b/css/styles.css
@@ -658,8 +658,10 @@ link {
   display: flex;
   align-items: center;
   justify-content: center;
-   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #8e8f99;
+  ;
 }
 
 .custom_svg {
