--- a/css/styles.css
+++ b/css/styles.css
@@ -660,7 +660,7 @@ link {
   justify-content: center;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background-color: #8e8f99;
+  color: #8e8f99;
   ;
 }
 
