--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,7 @@ link {
   text-transform: uppercase;
   font-weight: 800;
   margin-right: 76px;
+  margin-bottom: 16px;
   display: inline-block;
 }
 
